--- a/index.html
+++ b/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
-<html ng-app="NarrowItDownApp">
+<html lang="en" ng-app="NarrowItDownApp">
 <head>
-  <meta charset="UTF-8">
-  <title>Narrow Down Menu Items</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Narrow It Down!</title>
 </head>
 <body>
+    <div ng-controller="NarrowItDownController as ctrl">
+        <input type="text" ng-model="ctrl.searchTerm" placeholder="Search term">
+        <button ng-click="ctrl.narrowItDown()">Narrow It Down For Me!</button>
 
-  <div ng-controller="NarrowItDownController as narrowCtrl">
-    <h1>Narrow Down Your Menu Choices</h1>
+        <found-items items="ctrl.found" on-remove="ctrl.removeItem(index)"></found-items>
 
-    <input type="text" ng-model="narrowCtrl.searchTerm" placeholder="Enter search term">
-    <button ng-click="narrowCtrl.narrowItDown()">Narrow It Down For Me!</button>
-
-    <found-items items="narrowCtrl.found" on-remove="narrowCtrl.removeItem(index)"></found-items>
-    
-  </div>
-
-  <!-- AngularJS library -->
+        <p ng-if="ctrl.found.length === 0 && ctrl.message">Nothing found</p>
+    </div>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
-  <!-- App script -->
-  <script src="app.js"></script>
 
+    <script src="js/app.js"></script>
 </body>
 </html>
