--- a/foundItems.html
+++ b/foundItems.html
@@ -1,6 +1,7 @@
 <ul>
-    <li ng-repeat="item in items">
-        {{ item.name }}, {{ item.short_name }}, {{ item.description }}
-        <button ng-click="onRemove({index: $index})">Don't want this one!</button>
+    <li ng-repeat="item in list.items">
+      {{ item.name }} - {{ item.short_name }}: {{ item.description }}
+      <button ng-click="list.onRemove({ index: $index });">Don't want this one!</button>
     </li>
-</ul>
+  </ul>
+  
