--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html ng-app="NarrowItDownApp">
 <head>
   <title>Narrow It Down</title>
+  <link rel="stylesheet" href="styles.css">
+
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.8.2/angular.min.js"></script>
   <script src="app.js"></script>
 </head>
